Add endpoint separate endpoints for Crypto, Uniqueness and Vault
