# libs/virtual-node/virtual-node-endpoints/src/main/kotlin/net/corda/libs/virtualnode/endpoints/v1/VirtualNodeRestResource.kt
@@ -127,29 +127,47 @@ interface VirtualNodeRestResource : RestResource {
     ): AsyncOperationStatus
 
     @HttpGET(
-        path = "db/{dbTypeOrCpiChecksum}",
-        title = "Return creation schema SQL",
-        description = "Returns the SQL needed for intention to create a virtual node or latest uploaded CPI.",
-        responseDescription = "SQL needed to bring schema up to date.",
+        path = "create/db/vault/crypto",
+        title = "Gets Crypto creation schema SQL",
+        description = "This method returns the Crypto SQL needed for intention to create a virtual node.",
+        responseDescription = "SQL needed to create the Crypto DB",
         minVersion = RestApiVersion.C5_2
     )
-    fun getCreateSchemaOrCpiSQL(
-        @RestPathParameter(description = "Virtual node database type or CPI checksum")
-        dbTypeOrCpiChecksum: String,
+    fun getCreateCryptoSchemaSQL(): ResponseEntity<String>
+
+    @HttpGET(
+        path = "create/db/uniqueness",
+        title = "Gets Uniqueness creation schema SQL",
+        description = "This method returns the Uniqueness SQL needed for intention to create a virtual node.",
+        responseDescription = "SQL needed to create the Uniqueness DB",
+        minVersion = RestApiVersion.C5_2
+    )
+    fun getCreateUniquenessSchemaSQL(): ResponseEntity<String>
+
+    @HttpGET(
+        path = "create/db/vault/{cpiChecksum}",
+        title = "Gets Vault creation schema SQL",
+        description = "This method returns the Vault SQL needed for intention to create a virtual node and latest uploaded CPI.",
+        responseDescription = "SQL needed to create the Vault DB and CPI",
+        minVersion = RestApiVersion.C5_2
+    )
+    fun getCreateVaultSchemaSQL(
+        @RestPathParameter(description = "The file checksum of the CPI")
+        cpiChecksum: String,
     ): ResponseEntity<String>
 
     @HttpGET(
-        path = "{virtualNodeShortId}/db/{dbType}",
-        title = "Return migration schema SQL",
-        description = "Returns the SQL needed to update the Liquibase schema so that it is up to date.",
+        path = "{virtualNodeShortId}/db/vault/{newCpiChecksum}",
+        title = "Gets migration schema SQL",
+        description = "This method returns the SQL needed to update the virtual node's CPI",
         responseDescription = "SQL needed to bring schema up to date.",
         minVersion = RestApiVersion.C5_2
     )
     fun getUpdateSchemaSQL(
         @RestPathParameter(description = "Short ID of the virtual node instance")
         virtualNodeShortId: String,
-        @RestPathParameter(description = "Virtual node database type")
-        dbType: String
+        @RestPathParameter(description = "The file checksum of the CPI to be upgraded to")
+        newCpiChecksum: String
     ): ResponseEntity<String>
 
     /**
